--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
+regex = "1.4"
+scanf = "1.2.1"
 
 # Template dependencies
 chrono = { version = "0.4.38", optional = true }
